--- a/vendor-nginx.conf
+++ b/vendor-nginx.conf
@@ -7,7 +7,7 @@ server {
     listen 80;
 
     add_header Access-Control-Allow-Origin *;
-    add_header Access-Control-Allow-Methods 'GET';
+    add_header Access-Control-Allow-Methods 'GET,POST';
     add_header Access-Control-Allow-Headers 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
 
     access_log /var/log/nginx/access.log plutusvendor;
