build: add scripts and configuration files
Signed-off-by: Jody <qizhaodi@koderover.com>

--- a/vendor-nginx.conf
+++ b/vendor-nginx.conf
@@ -17,8 +17,32 @@ server {
     proxy_send_timeout 100s;
     proxy_read_timeout 100s;
 
+    # proxy_pass 以 / 结尾，匹配字符串被忽略
+    location /baseURL/ {
+        proxy_pass http://xx.yy.zz/;
+        proxy_set_header Host $host;
+        proxy_set_header Referer $http_referer;
+    }
+
+    # 使用 ~ 时，proxy_pass 不能以 / 结尾 （会报错 没细研究）
+    location ~ /api {
+        proxy_pass http://xx.yy.zz;
+        proxy_set_header Host $host;
+        proxy_set_header Referer $http_referer;
+    }
+
     location / {
+        root '/'; # need
         index index.html index.htm;
         try_files $uri $uri/ /plutus-vendor/index.html;
     }
 }
+
+# image 内 nginx 操作
+# nginx -t 检测nginx配置
+# nginx -t -c xx.config  指定配置检测
+# nginx -s reload 更新配置后重加载一下
+
+# apt-get update 更新一下  不然安装不了东西
+# apt-get install vim 下载 vim 用来编辑 nginx.conf
+# apt-get install curl 测试下 url 通不通
