--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "plutus-vendor",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --modern",
